# IndividualAssignent02445

./: Path.py  pyproject.toml  test_NestedCV.py
Documents/: Main.tex
Documents/Part1/: Main_part_1.tex
Documents/Part2/: Main_part_2.tex  posthoc.tex
SandTwoLayer/: TwoLayer.py  __init__.py
assignment/task_2/: friedman.tex
