[tool.poetry]
name = "individual-assignmen-02445"
version = "0.1.0"
description = ""
authors = ["Mathias Sand <67421941+Mathiassand14@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
scikit-learn = "^1.7.0"
xgboost = "^3.0.2"
pandas = "^2.3.0"
tqdm = "^4.67.1"
matplotlib = "^3.10.3"
pingouin = "^0.5.5"
jinja2 = "^3.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
